# routes/v1/api.php
@@ -9,6 +9,7 @@ use App\Http\Controllers\Api\PartnerController;
 use App\Http\Controllers\Api\ProductController;
 use App\Http\Controllers\Api\PackageController;
 use App\Http\Controllers\Api\PackageItemController;
+use App\Http\Controllers\Api\TransactionController;
 
 Route::post('/login', [AuthController::class, 'login']);
 
@@ -21,4 +22,5 @@ Route::middleware(['auth:sanctum'])->group(function () {
     Route::apiResource("products", ProductController::class);
     Route::apiResource("packages", PackageController::class);
     Route::apiResource("package-items", PackageItemController::class)->except('show');
+    Route::apiResource("transactions", TransactionController::class);
 });
